# bonding-contract

./: Cargo.toml  Forc.toml
artefacts/: oracle-abi.json
src/: main.sw
tests/: harness.rs  prices.json  tokens.json
tests/utils/: bonding_utils.rs  mod.rs  oracle_utils.rs  token_utils.rs
